--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ html, body {
 header{
   position: sticky;
   top: 0;
-  background: Blue;
+  background: White;
   height: 66px;
   box-shadow: rgba(0, 0, 0, 0.15) 1.95px 1.95px 2.6px;
 }
